--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -6,6 +6,7 @@
 				<h4> Cody Switzer</h4>
 				<h5>ID: 033</h5>
 				<h5> Engineer</h5>
+				<h5>GitHub user name: cswitzer85</h5>
 			</div>
 			<div class="card-action">
 				<a href="cswitzer85@gmail.com">email: cswitzer85@gmail.com</a>
@@ -13,3 +14,4 @@
 		</div>
 	</div>
 </div>
+
